WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133634
WebGL WEBGL_draw_buffers missing (iOS and Desktop)
https://bugs.webkit.org/show_bug.cgi?id=133634
Summary
WebGL WEBGL_draw_buffers missing (iOS and Desktop)
Florian Bösch
Reported
2014-06-08 22:36:28 PDT
The WebGL extension WEBGL_draw_buffers is missing on iOS8. Possibly a merge task/regression. Related ticket (rename from EXT to WEBGL):
https://bugs.webkit.org/show_bug.cgi?id=128894
Specification:
http://www.khronos.org/registry/webgl/extensions/WEBGL_draw_buffers/
Attachments
patch
(2.07 KB, patch)
2014-12-10 13:12 PST
,
Roger Fong
bfulgham
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Florian Bösch
Comment 1
2014-06-18 00:19:09 PDT
iOS8 Beta 2 is still missing WEBGL_draw_buffers. They're also missing on desktop safari. Firefox implements this feature on OSX, Linux and Android. Chrome implements it on OSX and Linux.
Roger Fong
Comment 2
2014-12-10 13:07:45 PST
rdar://problem/15949588
Roger Fong
Comment 3
2014-12-10 13:12:10 PST
Created
attachment 243061
[details]
patch
Roger Fong
Comment 4
2014-12-10 13:42:10 PST
The implementation for this was already done before but was not switched on due to underlying driver bugs which have now been resolved. Flipping on the switch.
Brent Fulgham
Comment 5
2014-12-10 13:44:27 PST
Comment on
attachment 243061
[details]
patch r=me.
Brent Fulgham
Comment 6
2014-12-10 13:45:39 PST
(In reply to
comment #5
)
> Comment on
attachment 243061
[details]
> patch > > r=me.
We might want to either confirm drivers at runtime, or limit this to specific OS revisions.
Roger Fong
Comment 7
2014-12-10 14:33:02 PST
http://trac.webkit.org/changeset/177099
http://trac.webkit.org/changeset/177101
Marcin Ignac
Comment 8
2016-02-29 17:24:14 PST
WEBGL_draw_buffers is still not available on iOS 9.2.1. Are there any plans to push it?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug