Implement Multiple Render Targets as WebGL 1 extension. https://bugs.webkit.org/show_bug.cgi?id=133634. <rdar://problem/15949588> Reviewed by Brent Fulgham. Tested by: webgl/1.0.3/conformance/extensions/webgl-draw-buffers.html Enable the implementation now that an underlying driver bug has been resolved. Do not enable for desktop platforms older that OS X 10.10. * html/canvas/WebGLDrawBuffers.cpp: (WebCore::WebGLDrawBuffers::supported):

Canonical link: https://commits.webkit.org/157354@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177099 268f45cc-cd09-0410-ab3c-d52691b4dbfc